Added sound on timer end, fixed bug with set timer informer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <h1>Simple timer</h1>
         <div class='time'><span class = 'timerhrs'>00</span>:<span class="timermins">00</span>:<span class="timersecs">00</span></div>
-        <div class='timer-value'><p>Timer has been set to: <span class='timer-info'>0:00:00</span></p></div>
+        <div class='timer-value'>Timer has been set to: <span class='timer-info'>00:00:00</span></div>
         <div class="controls">
             <button class="start">Start</button>
             <button class="stop">Stop</button>
